--- a/about.html
+++ b/about.html
@@ -85,10 +85,11 @@
             background: purple;
             padding: 10px 15px;
             border-radius: 5px;
-            transition: 0.3s;
+            transition: 0.4s;
+            transition-duration: 0.4s;
         }
         .nav a:hover {
-            background: #800080;
+            background: black;
         }
         .dropdown {
             position: relative;
