--- a/about.html
+++ b/about.html
@@ -89,8 +89,7 @@
             transition-duration: 0.4s;
         }
         .nav a:hover {
-            background: black;
-            border: purple;
+            background: #4a014a;
         }
         .dropdown {
             position: relative;
