--- a/impr.html
+++ b/impr.html
@@ -74,7 +74,7 @@
             transition: 0.3s;
         }
         .nav a:hover {
-            background: #800080;
+            background: #4a014a;
         }
         .dropdown {
             position: relative;
