--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             transition: 0.3s;
         }
         .nav a:hover {
-            background: #800080;
+            background: #4a014a;
         }
         .dropdown {
             position: relative;
