--- a/about.html
+++ b/about.html
@@ -8,17 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
     <style>
         .button1 {
           background-color: black;
           color: white;
           border: 2px solid purple; /* Green */
-        }
-        .major-mono-display-regular {
-          font-family: "Major Mono Display", monospace;
-          font-weight: 400;
-          font-style: normal;
         }
 
         @font-face {
@@ -49,7 +44,7 @@
         body {
             background-color: black;
             color: white;
-            font-family: "Major Mono Display", monospace;
+            font-family: "Irish Grover";
             font-weight: 400;
             font-style: normal;
             margin: 0;
