--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-family: 'RaelaGrotesque';
@@ -32,7 +32,7 @@
         body {
             background-color: black;
             color: white;
-            font-family: "Major Mono Display", monospace;
+            font-family: "Irish Grover";
             font-weight: 400;
             font-style: normal;
             margin: 0;
