--- a/about.html
+++ b/about.html
@@ -219,5 +219,13 @@
             nav.classList.toggle('active');
         });
     </script>
+    <div id="spotify-embed"></div>
+    <script>
+        fetch('embedd.txt') // adjust path if needed
+            .then(res => res.text())
+            .then(code => {
+                document.getElementById('spotify-embed').innerHTML = code;
+            });
+    </script>
 </body>
 </html>
