--- a/about.html
+++ b/about.html
@@ -220,6 +220,8 @@
         });
     </script>
     <div id="spotify-embed"></div>
+    <h2>A Song</h2>
+    <p>Cause why not?</p>
     <script>
         fetch('embedd.txt') // adjust path if needed
             .then(res => res.text())
